Fixes a bug with the display of the fixed userinfo panel when the left-nav is open. It now behaves the same as the article content - squishing at large screen sizes and clipping on small screens.
Also fixes weird white box bug in Chrome and Safari.

Also consolidating css for #mw-mf-diffview #mw-mf-userinfo.

Depends on having the Echo and Thanks extensions installed.

Dependency: Ibc6916640840b5c1f05297f8f05ee44746f37b9d

--- a/less/common/mainmenu.less
+++ b/less/common/mainmenu.less
@@ -126,7 +126,6 @@ body.navigation-enabled {
 	#mw-mf-page-center {
 		position: absolute;
 		height: 100%;
-		overflow: hidden;
 		// set border here (#mw-mf-page-left doesn't expand height)
 		border-left: solid 1px #000;
 		box-shadow: -5px 0 0 0 rgba(0, 0, 0, 0.1);
@@ -165,6 +164,12 @@ body.navigation-enabled {
 		.position-fixed,
 		#mw-mf-page-center {
 			left: 20% !important;
+		}
+
+		#mw-mf-diffview {
+			#mw-mf-userinfo {
+				width: 80%;
+			}
 		}
 	}
 }
