--- a/less/specials/mobilediff.less
+++ b/less/specials/mobilediff.less
@@ -87,9 +87,16 @@
 
 	#mw-mf-userinfo {
 		min-height: @userInfoHeight;
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+		width: 100%;
 		padding: 1em;
 		background-color: #f0f0f0;
 		border-top: solid 1px #c0c0c0;
+		bottom: 0;
+		left: 0;
+		right: 0;
 
 		&::before {
 			content: "";
@@ -173,14 +180,6 @@
 	.revision-history-links {
 		font-size: 0.9em;
 		margin-top: 8px;
-	}
-}
-
-#mw-mf-diffview {
-	#mw-mf-userinfo {
-		bottom: 0;
-		left: 0;
-		right: 0;
 	}
 }
 
